--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "build": "vite build",
+    "build:github": "vite build && echo. > dist/.nojekyll",
     "preview": "vite preview",
-    "preview:host": "vite preview --host"
+    "preview:host": "vite preview --host",
+    "deploy": "npm run build:github && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.18",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.2",
     "vite-plugin-pwa": "^1.0.2"
   }
